# Sign-Flame

flame/: LICENSE  Makefile  README.md  pyproject.toml
flame/docs/: mkdocs.yml
flame/docs/docs/: index.md
flame/src/llm/: features.py
flame/src/llm/modeling/: train.py
flame/src/vision/: __init__.py  dataset.py  plots.py
flame/src/vision/modeling/: predict.py
notebooks/: EMPATH_implementation_test.ipynb  Media Pipe.ipynb  mediapipe_landmarks_visualization.ipynb  transformer training.ipynb
